Name:                wiki-suite
Version:             0.7.1
Synopsis:            HTML5 Canvas Graphics Library wiki generator and test suite
description:         HTML5 Canvas Graphics Library wiki generator and test suite.
license:             BSD3
license-file:        LICENSE
maintainer:          andygill@ku.edu
category:            Graphics
build-type:          Simple
Cabal-version:       >= 1.10
tested-with:         GHC == 7.8.4
                   , GHC == 7.10.3
                   , GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.2
data-files:          images/Haskell.jpg
                     images/House.jpg

executable wiki-suite
    build-depends:    base                  >= 4.7  && < 4.17,
                      base-compat-batteries >= 0.10 && < 0.13,
                      blank-canvas,
                      containers            >= 0.5  && < 0.7,
                      process               >= 1.2  && < 1.7,
                      directory             >= 1.2,
                      shake                 >= 0.14,
                      stm                   >= 2.2  && < 2.6,
                      text                  >= 1.1  && < 2.1,
                      time                  >= 1.4  && < 1.12,
                      unix                  >= 2.7  && < 2.8,
                      vector                >= 0.10 && < 0.13

    default-language: Haskell2010
-- add -fhpc to do coverage
    GHC-options:      -threaded -Wall
    main-is:          Main.hs
    other-modules:    Arc
                      Bezier_Curve
                      Bounce
                      Circle
                      Clipping_Region
                      Color_Fill
                      Color_Square
                      Custom_Shape
                      Custom_Transform
                      Draw_Canvas
                      Draw_Device
                      Draw_Image
                      Favicon
                      Font_Size_and_Style
                      Get_Image_Data_URL
                      Global_Alpha
                      Global_Composite_Operations
                      Grayscale
                      Image_Crop
                      Image_Loader
                      Image_Size
                      Is_Point_In_Path
                      Key_Read
                      Line
                      Line_Cap
                      Line_Color
                      Line_Join
                      Line_Width
                      Linear_Gradient
                      Load_Image_Data_URL
                      Load_Image_Data_URL_2
                      Miter_Limit
                      Path
                      Pattern
                      Quadratic_Curve
                      Radial_Gradient
                      Rectangle
                      Red_Line
                      Rotate_Transform
                      Rotating_Square
                      Rounded_Corners
                      Scale_Transform
                      Semicircle
                      Shadow
                      Square
                      Text_Align
                      Text_Baseline
                      Text_Color
                      Text_Metrics
                      Text_Stroke
                      Text_Wrap
                      Tic_Tac_Toe
                      Translate_Transform
                      Wiki

                      Paths_wiki_suite
